--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
+    "classnames": "^2.5.1",
     "lucide-react": "^0.479.0",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
     "tailwind-scrollbar": "^4.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
