--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-table": "^8.21.2",
+    "ag-charts-react": "^11.2.0",
     "ag-grid-react": "^33.1.1",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
