--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-table": "^8.21.2",
-    "ag-charts-react": "^11.2.0",
+    "ag-charts-react": "^11.2.1",
     "ag-grid-react": "^33.1.1",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
