--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "ag-grid-react": "^33.1.1",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.479.0",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
