--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.12",
