--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.2",
     "tailwind-scrollbar": "^4.0.1",
