--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/vite": "^4.0.12",
+    "ag-grid-react": "^33.2.4",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
     "framer-motion": "^12.6.2",
