--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.54.2",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
