--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/vite": "^4.0.12",
+    "ag-charts-react": "^11.3.0",
     "ag-grid-community": "^33.2.4",
     "ag-grid-react": "^33.2.4",
     "axios": "^1.8.2",
@@ -29,7 +30,6 @@
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
-    "recharts": "^2.15.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.12",
