--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
     "@tailwindcss/vite": "^4.0.12",
+    "ag-charts-community": "^11.3.2",
     "ag-charts-react": "^11.3.1",
     "ag-grid-community": "^33.2.4",
     "ag-grid-react": "^33.2.4",
